# esniper

./: .gitignore  .valgrindrc  COPYING  COPYRIGHT  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  ReleaseBuild  ReleaseBuild.sh  ReleaseNote  TODO  auction.c  auction.h  auctionfile.c  auctionfile.h  auctioninfo.c  auctioninfo.h  autogen.sh  buffer.c  buffer.h  captcha.html  configure  configure.in  esniper.1  esniper.c  esniper.dsp  esniper.dsw  esniper.h  esniper.mak  esniper.mdzip  esniper.supp  esniper_man.html  getopt.c  getopt.h  history.c  history.h  html.c  (+11 more)
frontends/: snipe
frontends/php/: .project  README  TODO  config.inc  esniper  esniper.sql  esniperstart.sh  ez_sql.php  gruppenNotizen.php  gruppenVerwalten.php  htmlutil.php  index.php  jsutil.js  language.php  main.css  menue.psd  neuerArtikel.php  phpLinkCheck.php  reload.php  setperms.sh  updateDB.php  utils.php
